syntax = "proto3";

package task;

option go_package = "github.com/sejamuchhal/taskhub/protos/task";

import "google/protobuf/timestamp.proto";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  google.protobuf.Timestamp due_date = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateTaskRequest {
  Task task = 1;
}

message CreateTaskResponse {
  string id = 1;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {
  int32 limit = 1;
  int32 offset = 2;
  bool pending = 4;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  int64 total_count = 2;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {}

message UpdateTaskRequest {
  Task task = 1;
}

message UpdateTaskResponse {}
